--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
        "value": "latest"
      }
   },
-  "website": "https://github.com/wellyoufs/Xray-heroku",
+  "website": "https://github.com/ttffyuri/xry",
   "repository": "https://github.com/wellyoufs/Xray-heroku",
   "stack": "container"
  }
